tests/fail/fail-global2.mc
int b;
bool c;
int a;
int b; /* Duplicate global variable */

int main()
{
  return 0;
}
